# exiftool-wrapper

./: pyproject.toml  tox.ini
.github/workflows/: main.yaml
exiftool_wrapper/: wrapper.py
tests/: test_version.py  test_wrapper.py
