[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exiftool-wrapper"
version = "0.1.1"
description = "A lightweight wrapper for exiftool"
authors = [{ name = "Nils Philippsen", email = "nils@tiptoe.de" }]
requires-python = ">=3.8.0,<4"
license = "LGPL-3.0-or-later"

[dependency-groups]
dev = [
    "pillow>=9.0.1,<12",
    "pytest>=6.2.5,<9",
    "pytest-cov>=2.12.1,<7",
    "coverage>=7.3.0,<8",
    "toml>=0.10.2,<0.11",
    "pytest-xdist>=3.6.1",
]

[tool.pytest.ini_options]
addopts = "--cov-config .coveragerc --cov=exiftool_wrapper --cov-report=term --cov-report=xml --cov-report=html"
flake8-max-line-length = 100

[tool.isort]
line_length=100
profile="black"

[tool.black]
line-length=100
